@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="service.openelec.settings"
        name="OpenELEC Configuration"
-       version="0.1.14"
+       version="0.1.15"
        provider-name="OpenELEC">
    <requires>
    	<import addon="xbmc.python" version="2.0"/>
