@@ -1,3 +1,7 @@
+2013-04-18 v-0.1.15
+  (change) new update function
+  (change) wait for bt adapter loop reduced to 3
+  
 2013-04-15 v-0.1.14
   (add) save hostname
   (add) help hints
